objects/Twitter_Endpoints__mdt.object
<CustomObject>
    <fields>
        <fullName>Followers__c</fullName>
        <label>Followers</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Post_Message__c</fullName>
        <label>Post Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Tweets__c</fullName>
        <label>Post Tweets</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <label>Timeline</label>
        <type>Url</type>
    </fields>
    <label>Twitter Endpoint</label>
    <pluralLabel>Twitter Endpoint</pluralLabel>
</CustomObject>